# skill-supply-chains

./: .gitignore  CHANGELOG.md  OPERATIONS.md  ORIGINS.md  PIPELINE.md  PROJECT-STATUS.md  README.md  REVIEW.md  pyproject.toml  skill_supply_chains.py
examples/: basic_usage.py  custom_scenario.py  custom_simulation.py
src/skill_supply_chains/: __init__.py  __main__.py  cli.py  core.py  scenarios.py
tests/: test_supply_chains.py
