[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skill-supply-chains"
version = "1.0.0"
description = "Multi-hop skill genealogy simulator for agent ecosystems"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
skill-supply-chains = "skill_supply_chains:main"
