[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-supply-chains"
version = "1.1.0"
description = "Multi-hop skill genealogy simulator for agent ecosystems"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Proto Labs"}]
keywords = ["simulation", "agent", "skill", "supply-chain", "genealogy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
skill-supply-chains = "skill_supply_chains.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
